--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "big-integer": "^1.6.42",
+    "js-combinatorics": "^0.5.4",
+    "lodash": "^4.17.11",
+    "mathjs": "^5.7.0",
+    "polynomial": "^1.4.3",
     "react": "^16.8.3",
+    "react-animate-height": "^2.0.7",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "react-select": "^2.4.1",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
