--- a/package.json
+++ b/package.json
@@ -1,33 +1,37 @@
 {
-  "name": "dice_probability_calculator",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "big-integer": "^1.6.42",
-    "js-combinatorics": "^0.5.4",
-    "lodash": "^4.17.11",
-    "mathjs": "^5.7.0",
-    "polynomial": "^1.4.3",
-    "react": "^16.8.3",
-    "react-animate-height": "^2.0.7",
-    "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5",
-    "react-select": "^2.4.1",
-    "styled-components": "^4.1.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+	"name": "dice_probability_calculator",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"big-integer": "^1.6.42",
+		"js-combinatorics": "^0.5.4",
+		"lodash": "^4.17.11",
+		"mathjs": "^5.7.0",
+		"polynomial": "^1.4.3",
+		"react": "^16.8.3",
+		"react-animate-height": "^2.0.7",
+		"react-dom": "^16.8.3",
+		"react-scripts": "2.1.5",
+		"react-select": "^2.4.1",
+		"styled-components": "^4.1.3"
+	},
+	"scripts": {
+		"start": "react-app-rewired start",
+		"build": "react-app-rewired build",
+		"test": "react-app-rewired test --env=jsdom",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	],
+	"devDependencies": {
+		"react-app-rewired": "^2.1.1",
+		"worker-loader": "^2.0.0"
+	}
 }
