--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	],
 	"devDependencies": {
 		"@types/react-transition-group": "^2.9.2",
+		"@types/styled-jsx": "2.2.3",
 		"react-app-rewired": "^2.1.1",
 		"worker-loader": "^2.0.0"
 	}
