--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"react-dom": "^16.8.3",
 		"react-scripts": "2.1.5",
 		"react-select": "^2.4.1",
+		"react-spring": "^8.0.27",
 		"react-transition-group": "^4.1.1",
 		"styled-components": "^4.1.3"
 	},
