--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"d3-ease": "^1.0.5",
 		"js-combinatorics": "^0.5.4",
 		"lodash": "^4.17.11",
 		"mathjs": "^5.7.0",
