--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@material-ui/core": "^4.0.0-rc.0",
+		"@material-ui/icons": "^4.2.1",
 		"d3-ease": "^1.0.5",
 		"js-combinatorics": "^0.5.4",
 		"lodash": "^4.17.11",
