--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"@material-ui/core": "^4.0.0-rc.0",
 		"@material-ui/icons": "^4.2.1",
+		"@types/styled-components": "^4.1.16",
 		"d3-ease": "^1.0.5",
 		"js-combinatorics": "^0.5.4",
 		"lodash": "^4.17.11",
@@ -14,9 +15,11 @@
 		"react-dom": "^16.8.3",
 		"react-scripts": "2.1.5",
 		"react-select": "^2.4.1",
-		"react-spring": "^8.0.27",
+		"react-spring": "^9.0.0-beta.31",
 		"react-transition-group": "^4.1.1",
-		"styled-components": "^4.1.3"
+		"recharts": "^1.6.2",
+		"styled-components": "^4.1.3",
+		"typescript": "^3.5.2"
 	},
 	"scripts": {
 		"start": "react-app-rewired start",
