--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
 		"react-spring": "^9.0.0-beta.31",
 		"react-transition-group": "^4.1.1",
 		"recharts": "^1.6.2",
-		"styled-components": "^4.1.3",
-		"typescript": "^3.5.2"
+		"styled-components": "^4.1.3"
 	},
 	"scripts": {
 		"start": "react-app-rewired start",
@@ -39,6 +38,9 @@
 	"devDependencies": {
 		"@types/react-transition-group": "^2.9.2",
 		"@types/styled-jsx": "2.2.3",
+		"eslint-config-prettier": "^6.0.0",
+		"eslint-plugin-prettier": "^3.1.0",
+		"prettier": "^1.18.2",
 		"react-app-rewired": "^2.1.1",
 		"worker-loader": "^2.0.0"
 	}
